--- a/templates/home.html
+++ b/templates/home.html
@@ -41,6 +41,7 @@
         .button-left     { grid-column: 1; grid-row: 2; background: #2196F3; } /* Blue ▢ */
         .button-right    { grid-column: 3; grid-row: 2; background: #F44336; } /* Red ○ */
         .button-backward { grid-column: 2; grid-row: 3; background: #FFC107; } /* Yellow × */
+        .button-stop     { grid-column: 2; grid-row: 2; background: #808080; } /* Gray STOP */
 
         /* Hover effect */
         .button:hover {
@@ -55,6 +56,7 @@
         <div id="controls" class="controller">
             <button class="button button-forward" data-direction="forward">up</button>
             <button class="button button-left" data-direction="left">left</button>
+            <button class="button button-stop" data-direction="stop">STOP</button>
             <button class="button button-right" data-direction="right">right</button>
             <button class="button button-backward" data-direction="backward">back</button>
         </div>
